# mesh2depth

./: CMakeLists.txt  Camera.hpp  Film.cpp  Film.hpp  Model.cpp  Model.hpp  Processor.cpp  Processor.hpp  README.md  m2d_interface.py  main.cpp  offline_test.cpp  python.cpp  stb_image_write.c  utils.hpp
include/: BBox.hpp  Film.hpp  Model.hpp  Processor.hpp  Shader.hpp  utils.hpp
shader/: normal.frag  normal.vert  rect_texture.frag  rect_texture.vert
